app/assets/stylesheets/custom.css
html body{ font-size: 190%;} 

.nav li{ font-size: 115%;}

a.navbar-brand{font-size: 150%}


#landing {
  background-image: url('/assets/cover-compressor.jpg');
  background-size: cover;
  background-attachment: fixed;
  color: white;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.6);

}

#stripes {
  background-image: url('/assets/lines.jpg');
  background-size: cover;
}

.field_with_errors > input {
 border:4px solid orange;
}

.youtube_container_show {
    position: relative;
    padding-bottom: 45%;
    padding-top: 35px;
    height: 0;
    overflow: hidden;
}

.youtube_container_show iframe {
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
    display:block;
}

.youtube_container_edit {
    position: relative;
    padding-bottom: 30%;
    padding-top: 35px;
    height: 0;
    overflow: hidden;
}

.youtube_container_edit iframe {
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 87%;
    display:block;
}

.heading {
  text-align: left;
  padding-bottom: .5em;
  color: black;
  text-shadow: 1px 1px 1px white;
}

@media (max-width: 550px) {
    h2.heading {
      padding-top:1.5em;
    }
    form.dropdown-toggle-default.pull-right{
      padding-bottom: 1.5em;
      margin-right: 35%;
      padding-top: .5em;
    }

    #search-form{
      padding-bottom: 1.5em;
    }

    li.list-group-item#step-list{
      min-height: 8em;
      overflow:scroll;
    }
    span#step-tags {
      line-height: 3em;
    }
}

button > a {
  color: white; 
  text-decoration: none;
}
  

.col-md-4 well {
  padding-right: 0;
  border-right: 0;
}

.checkbox-inline.no_indent {
  margin-left: 0;
  margin-right: 20px;
}

#navblacktext {
  color: black;
  text-shadow: 1px 1px 1px white;
}

span#style_delete {
  cursor: pointer;
}

.url_field {
  width: 50%;
}

.title_field {
  width: 35%;
}

.year_field {
  width: 15%;
}

.timestamp_field {
  display: none;
}

.name_field {
  width: 35%;
}

.new_video_fields_group {
  display: none;
}

.video_dropdown {
  display: none;
}

div.add_video {
  display: inline-block;
}

div.add_step {
  display: inline-block;
}

ul.list-group.timemarkers {
  width: 60%;
}

a#cancel {
  padding-left: .5em;
  display: none;
}

.new_step_fields_group {
  display: none;
}

.step_dropdown {
  display: none;
}

ol#video-steps li {
  font-size: 1.1em;
  color: black;
}

ol#step-videos li {
  color: black;
  font-size: 1.1em;
}

li.copyright {
  color: black;
  text-shadow: 1px 1px 1px white;
  right: 0;
  position: relative;
  padding-top: 1em;
}

ul.bullet-free {
  list-style-type: none; 
  -webkit-padding-start: 0px;
}

div.text-center {
  margin-top: 5em;
  margin-bottom: 8em;
  position: relative;
}

#style_input{
  margin-right: 1em;
}

div.alert.alert-warning {
  width: 90%;
  margin: auto; 
  text-align: center; 
  font-size: 95%;
}

 div.intro-message#step-o {
  padding-bottom: 0;
}

